--- a/views/index.html
+++ b/views/index.html
@@ -35,22 +35,22 @@
     <div class="grid md:grid-cols-2 gap-8">
       <div class="bg-white rounded-lg shadow p-4">
         <h3 class="text-xl font-semibold mb-2">Bolitas de queso</h3>
-        <img src="/public/pictures/bolitas_de_queso.png" alt="Producto 1" class="rounded mb-4">
+        <img src="/public/pictures/bolitas_de_queso.webp" alt="Producto 1" class="rounded mb-4">
         <p>Pequeños tesoros de queso derretido, envueltos en una crujiente capa dorada. ¡Perfectas para picar y compartir en cualquier momento!</p>
       </div>
       <div class="bg-white rounded-lg shadow p-4">
         <h3 class="text-xl font-semibold mb-2">Empanadas</h3>
-        <img src="/public/pictures/empanada_pizza.png" alt="Producto 2" class="rounded mb-4">
+        <img src="/public/pictures/empanada_pizza.webp" alt="Producto 2" class="rounded mb-4">
         <p>Una explosión de sabor en cada mordisco. Rellenas con una mezcla irresistible de ingredientes y horneadas a la perfección, nuestras empanadas son un clásico que nunca falla.</p>
       </div>
       <div class="bg-white rounded-lg shadow p-4">
         <h3 class="text-xl font-semibold mb-2">Croquetas de Pollo</h3>
-        <img src="/public/pictures/croqueta_pollo.png" alt="Producto 1" class="rounded mb-4">
+        <img src="/public/pictures/croqueta_pollo.webp" alt="Producto 1" class="rounded mb-4">
         <p>Deliciosas por dentro, crujientes por fuera. Nuestras croquetas de pollo son el aperitivo ideal que conquista a todos. Un bocado suave y sabroso que te transportará a tu niñez.</p>
       </div>
       <div class="bg-white rounded-lg shadow p-4">
         <h3 class="text-xl font-semibold mb-2">Pasteles en hoja</h3>
-        <img src="/public/pictures/pastel_en_hoja02.png" alt="Producto 2" class="rounded mb-4">
+        <img src="/public/pictures/pastel_en_hoja02.webp" alt="Producto 2" class="rounded mb-4">
         <p>El sabor tradicional que tanto amamos. Estos pasteles, envueltos en una hoja de plátano, son un manjar relleno con carne sazonada. Una experiencia gastronómica que deleita el paladar.</p>
       </div>
     </div>
@@ -62,12 +62,12 @@
  <div class="grid md:grid-cols-2 gap-8">
       <div class="bg-white rounded-lg shadow p-4">
         <h3 class="text-xl font-semibold mb-2">Supermercados Nacional</h3>
-        <img width = "400px" height="400px" src = "/public/pictures/super_nacional.jpg" alt="Producto 1" class="rounded mb-4">
+        <img width = "400px" height="400px" src = "/public/pictures/super_nacional.webp" alt="Producto 1" class="rounded mb-4">
         <!-- <p>Descripción del producto 1. Ideal para tus necesidades diarias.</p> -->
       </div>
       <div class="bg-white rounded-lg shadow p-4">
         <h3 class="text-xl font-semibold mb-2">Hipermercados Olé</h3>
-        <img width = "400px" height="400px" src="/public/pictures/Hipermercados_ole.png" alt="Producto 2" class="rounded mb-4">
+        <img width = "400px" height="400px" src="/public/pictures/Hipermercados_ole.webp" alt="Producto 2" class="rounded mb-4">
         <!-- <p>Descripción del producto 2. Hecho con los mejores materiales.</p> -->
       </div>
   </div>
